# unschema

./: README.md  pyproject.toml
unschema/: __main__.py
